# youtube-download-entire-channel

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  cookies.txt.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/youtube_channel_downloader/: __init__.py  channel_lister.py  cli.py  cookie_validator.py  downloader.py
tests/: test_channel_lister.py  test_cli.py  test_cookie_validator.py  test_downloader.py
