[project]
name = "youtube-channel-downloader"
version = "0.4.0"
description = "CLI tool to download all videos from a YouTube channel in maximum quality"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.11.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
]

[project.scripts]
download-channel = "youtube_channel_downloader.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
